# Rusty-CryptoMonitor

./: Cargo.toml  README.md
lua_scripts/: ui_config.lua
src/: crypto_data.rs  main.rs  ui_bridge.rs
ui/: app-window.slint  settings-window.slint
