[package]
name = "RustGUIOne"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.11.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
websocket = "0.27.1"
tungstenite = "0.26.2"

[build-dependencies]
slint-build = "1.11.0"
