[package]
name = "CryptoMonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.11.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tungstenite = "0.26.2"
i-slint-backend-winit = "1.11.0"
mlua = {version = "0.10.3",features = ["lua54"]}
reqwest = "0.12.18"

[build-dependencies]
slint-build = "1.11.0"
